# vbagent

./: .gitignore  README.md  pyproject.toml
.hypothesis/constants/: 03bc204e5012ef49  0b5540d75167c425  0c29a7d3f23041be  0c39ad398d04b673  0ce6d79bd9864125  11ca73632f73e633  12cbb31c09bcab56  1542cd4f1b111ca1  17d579d5fa6d55bd  1ba4085ac0dd3c54  1c4775cf187ce57b  1dd0af6fdbf06a40  1e1253ad4afec257  2024b81d0aa52d99  215d6ff3bf3f5c45  22b5b2b1dab65987  294cd2a9f1202492  2a2662d4810a61d2  2bf3246df8e7bd49  2ff31266724c1c6c  30d0712ec4399479  337f2d29d14a369c  35c35c31387b84af  37eb7aadf4df9236  3ae7e92843cd68e2  3bc204cd10f424f1  3d707c710aa66436  3ea9a9ae51c706b1  3fd09c8d1e4e828e  41f8ca6f3126aaff  430116997a14a416  46a229bc51e8cf17  4994bf935b7bf1f5  4b41f5c26e4c1d6c  4cf008610e7bfb81  4f8c15262fc62a5a  54910a89bb4ee5e8  588695fc6502b266  5c233a62003df9ef  5ce9cb9f89ae1056  (+89 more)
prompt_kinds/: __init__.py  assertion_reason_type.py  match_type.py  mcq_mc_type.py  mcq_sc_type.py  passage_type.py  subjective_type.py  variant_conceptual.py  variant_conceptual_calculus.py  variant_context.py  variant_numerical.py  variant_numerical_context.py
tests/: test_alternate.py  test_batch.py  test_classification.py  test_context.py  test_converter.py  test_idea.py  test_process.py  test_prompt_organization.py  test_reference_store.py  test_review.py  test_scanner.py  test_selector.py  test_tikz.py  test_variant.py  test_version_store.py
vbagent/: __init__.py  config.py
vbagent/agents/: __init__.py  alternate.py  base.py  clarity_checker.py  classifier.py  converter.py  idea.py  (+9 more)
(+104 files in other folders)
