[project]
name = "vbagent"
version = "0.1.0"
description = "CLI tool for physics question image scanning, categorization, and variant generation"
authors = [
    {name = "vaibhavblayer", email = "vaibhavblayer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.6.2",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "pillow>=10.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
vbagent = "vbagent.cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
